# image_recognition

./: .gitignore  .gitmodules  Readme.md
tools/bash/: catfile.sh  mnist.sh  output_dirs.sh  preprocess.sh
tools/cpp/: CMakeLists.txt
tools/cpp/demo/: CMakeLists.txt
tools/cpp/demo/src/: demo.cpp
tools/cpp/image2images/: CMakeLists.txt
tools/cpp/image2images/include/image2images/: File.h  Image.h  Learner.h
tools/cpp/image2images/src/: File.cpp  Image.cpp  Learner.cpp  image2images.cpp
tools/cpp/neuralnetwork/: CMakeLists.txt
tools/cpp/neuralnetwork/include/neuralnetwork/: NeuralNetwork.h
tools/cpp/neuralnetwork/src/: neuralnetwork.cpp
tools/cpp/tesseract/: CMakeLists.txt
tools/cpp/tesseract/src/: tesseract.cpp
tools/python/: CNN_first_portion_segregated_image_28.py  CNN_horizontal_image_40.py  CNN_second_portion_segregated_image_28.py  cnn.py  cnn_keras.py  cnn_keras2.py  cnn_test.py  cnn_test_2.py  cnn_test_NoPermutation.py  csv_tensor.py  demo.py  lr_OneVsRest.py  nn.py  nn4.py  overfit.py  plot.py  softmax_tf.py
tools/python/preprocess/: mnist2xy.py  mnist_bin2ocv.py  preprocess.py
